project/app/static/css/main.css
/* ... */
audio:not([controls]) {
  display: none;
  height: 0;
}

img {
  border-style: none;
}

svg:not(:root) {
  overflow: hidden;
}

/* Forms
   ========================================================================== */
button,
input,
optgroup,
select,
textarea {
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
html [type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  display: inline-block;
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

/* Interactive
   ========================================================================== */
details,
menu {
  display: block;
}

summary {
  display: list-item;
}

/* Scripting
   ========================================================================== */
canvas {
  display: inline-block;
}

template {
  display: none;
}

/* Hidden
   ========================================================================== */
[hidden] {
  display: none;
}

html {
  height: 100%;
}

fieldset {
  margin: 0;
  padding: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  border: 0;
}

legend {
  margin: 0;
  padding: 0;
  display: block;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
}

.btn-group-span{
  position: absolute;
  margin-top: 3vh;
  margin-left: 12vh;
}

#scrollBtn {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: #1E2832; /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

/*===============================
=            Choices            =
===============================*/

.topbar{
  background-color: white;
  width: 100vw;
  height: 12vh;
  position:absolute;
  left:0;
  top:0;
  right:0;
  box-shadow: 0px 10px 6px #E0E0E0;
}

.our-title{
  font-size: 3vw;
  position: absolute;
  color: #2D95DF;
  top:2vh;
  left: 2vw;
}

.links{
  text-decoration: none;
}

.small{
  display: inline-block;
}

/*global span*/

.hovering {
  float: left;
  margin-top: 2vh;
  margin-left: -6vw;
}
.hovering:hover button{
  background-color: #2567F5;
}

.hovering:hover i{
  color: white;
}

/* input search bar */
.inner-form > input{
  width: 50vw;
  height: 7vh;
  padding: 2.4%;
  border-radius: 21px;
  border: 0px;
  float: left;
  background-color: #E0E0E0;
  margin-top: 2vh;
}

.inner-textarea{
  height: 10vh;
  border-radius: 0.25rem;
  border: 0px;
  float: left;
  background-color: #E0E0E0;
  width: 98%;
  margin-bottom: 4%;
}

.inner-path > input{
  width: 50vw;
  height: 7vh;
  padding: 2.4%;
  border-radius: 21px;
  border: 0px;
  float: left;
  background-color: #E0E0E0;
  margin: 6vh 20vh 6vh 20vh;
}

input:focus{
    outline: none;
}

.white{
  color: white;
}

button:focus{
    outline: none;
}

.no-focus:focus{
  outline: none;
}

.search-btn{
  height: 7vh;
  width: 6.5vw;
  border-radius: 21px;
  border: 0px;
  background-color: #E0E0E0;
  vertical-align: center;
  text-align: center;
}

.mar-left{
  margin-left: 22vw;
}

.fa, .fas{
  font-size: 200%;
  margin-top: 0.1vh;
}

.fa-file-image-o {
  font-size: 225%;
  color: white;
  padding-top: 5%;
  margin-left: 6%;
  float: left;
}

.fa-user, .fa-folder-open{
  padding-right: 10%;
}

.pointer{
  cursor: pointer;
}

.child {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
}
.buttonAlign {

}
.buttonDiv {
  display: inline-block;
  margin-bottom: 1%;
  width: 100%;
  align-items: center;
}
.buttonMargin {
  margin-right: 2%;
  border-radius: 10px;
  border: none;
   height: 12vh;
}

.buttonMargin:hover{
  background-color: #2567F5 !important;
}

#firstButton {
  width: 18vw;
  margin-left: 18%;
  background-color: #2D95DF;
  color: white;
  text-align: center;
}

#secondButton {
  width: 18vw;
  background-color: #2D95DF;
  color: white;
  text-align: center;
}

#thirdButton {
  width: 18vw;
  background-color: #2D95DF;
  color: white;
  text-align: center;

}

.buttonText {
  margin-top: 10%;
}

.main{
  padding-top: 15vh;
  margin-top: -1.2vh;
  background-image: url("../img/bg-texture.png");
  background-color: rgba(248, 249, 250, 0.5);
  min-height: 150vh;
}

.bg-mine{
  background-color: rgba(248, 249, 250, 0.5);
}

.imageThumbnail {
  margin: 2% 25% 6% 25%
}
.imageThumbnailInMenu {
  object-fit: cover;
  width: 240px;
  height: 240px;
}
.imagePath {
  margin: 2% 0%;
}
/* ... */

